feat: add books module
